force-app/main/default/objects/Certification_Snapshot__c/Certification_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Certification Snapshot</label>
    <nameField>
        <label>Certification Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Certification Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>