force-app/main/default/objects/Certification_Snapshot__c/fields/Cert_Snapshot_Sched_Qtr__c.field-meta.xml
<CustomField>
    <fullName>Cert_Snapshot_Sched_Qtr__c</fullName>
    <description>Formula Field allows text display of quarter YR-Qx in reports.</description>
    <formula>TEXT(YEAR( Snapshot_Scheduled_Date__c )) &amp; &quot;Q&quot; &amp; TEXT(FLOOR(((MONTH( Snapshot_Scheduled_Date__c )-1)/3)+1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cert Snapshot Sched Qtr</label>
    <type>Text</type>
</CustomField>