force-app/main/default/objects/Certification_Snapshot__c/fields/Cert_Snapshot_Sched_Year__c.field-meta.xml
<CustomField>
    <fullName>Cert_Snapshot_Sched_Year__c</fullName>
    <description>Formula Field that determines year in the Snapshot Scheduled Date for reports.</description>
    <formula>TEXT(YEAR( Snapshot_Scheduled_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cert Snapshot Sched Year</label>
    <type>Text</type>
</CustomField>