force-app/main/default/objects/Certification_Snapshot__c/fields/Management_Qualitative_Score__c.field-meta.xml
<CustomField>
    <fullName>Management_Qualitative_Score__c</fullName>
    <description>This will store the manager individual Qualitative Score</description>
    <label>Management Qualitative Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>