force-app/main/default/objects/Certification_Snapshot__c/fields/Overall_Rating__c.field-meta.xml
<CustomField>
    <fullName>Overall_Rating__c</fullName>
    <label>Funnelocity Score</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>