force-app/main/default/objects/Certification_Snapshot__c/fields/Performer_Category__c.field-meta.xml
<CustomField>
    <fullName>Performer_Category__c</fullName>
    <formula>IF(Overall_Rating__c&gt;=10,&quot;Outstanding&quot;,
IF(Overall_Rating__c&gt;=8,&quot;Strong&quot;,
IF(Overall_Rating__c&gt;=6,&quot;Average&quot;,
IF(Overall_Rating__c&gt;=2,&quot;Marginal&quot;,&quot;Needs Improvement&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performer Category</label>
    <type>Text</type>
</CustomField>