force-app/main/default/objects/Certification_Snapshot__c/fields/Sales_Rep_Profile__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Profile</label>
    <referenceTo>Sales_Rep_Profile__c</referenceTo>
    <relationshipLabel>Certification Snapshots</relationshipLabel>
    <relationshipName>Certification_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>