force-app/main/default/objects/Certification_Snapshot__c/fields/Sales_Rep_Profile_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Profile_Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the sales rep snapshot record that the certification record is associated with.</description>
    <label>Sales Rep Profile Snapshot</label>
    <referenceTo>Sales_Rep_Profile_Snapshot__c</referenceTo>
    <relationshipLabel>Certification Snapshots</relationshipLabel>
    <relationshipName>Certification_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>