force-app/main/default/objects/Certification_Snapshot__c/fields/Target_value__c.field-meta.xml
<CustomField>
    <fullName>Target_value__c</fullName>
    <label>Target value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>