force-app/main/default/objects/Certification_Snapshot__c/fields/Total_Qualitative_Weighted_Score__c.field-meta.xml
<CustomField>
    <fullName>Total_Qualitative_Weighted_Score__c</fullName>
    <label>Total Qualitative Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>