force-app/main/default/objects/Certification_Snapshot__c/fields/Total_Quantitative_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantitative_Weight__c</fullName>
    <label>Total Quantitative Weight</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>