force-app/main/default/objects/Certification_Snapshot__c/fields/Total_Quantitative_Weighted_Score_c__c.field-meta.xml
<CustomField>
    <fullName>Total_Quantitative_Weighted_Score_c__c</fullName>
    <label>Total Quantitative Weighted Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>